<resources>
    <string name="app_name">CompleteNotes</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth_dd_mm_yy">Date Of Birth (DD/MM/YY)</string>
    <string name="name">Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_has_an_account">Already has an account</string>
    <string name="login_with_fingerprint">Login with fingerprint</string>
    <string name="loading">Loading...</string>
    <string name="save">Save</string>
</resources>