<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/pagebkg"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_edit_text"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/lavender"
                android:textColorHint="@color/lavender"
                android:textSize="36sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:autofillHints=""
                android:background="@drawable/custom_edit_text"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="8dp"
                android:hint="Email/Username"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/lavender"
                tools:ignore="TextContrastCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageview_show_hide_pwd"
                    android:layout_width="50dp"
                    android:layout_height="52dp"
                    android:layout_marginTop="20dp"
                    android:padding="8dp" />

                <EditText
                    android:id="@+id/loginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:autofillHints=""
                    android:background="@drawable/custom_edit_text"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/lavender"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/lavender"
                android:onClick="loginOnClick"
                android:text="@string/login"
                android:textSize="18sp"
                app:cornerRadius="20dp"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

            <Button
                android:id="@+id/fLoginBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/lavender"
                android:onClick="fLoginClick"
                android:text="@string/login_with_fingerprint"
                android:textSize="14sp"
                app:cornerRadius="20dp"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/signupRedirectText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:minHeight="48dp"
                android:onClick="redirectRegisterOnClick"
                android:padding="8dp"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/lavender"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:minHeight="48dp"
                android:onClick="forgotPasswordOnClick"
                android:padding="8dp"
                android:text="@string/forgot_your_password"
                android:textColor="@color/lavender"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>